--- a/index.html
+++ b/index.html
@@ -98,17 +98,17 @@
         <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
         <div class="w3-row-padding w3-center">
             <div class="w3-col m3">
-                <img src="/img/Co-Photographer.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+                <img src="./img/Co-Photographer.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
                     alt="Neko, the reluctant photographer's assistant">
             </div>
 
             <div class="w3-col m3">
-                <img src="/img/In-The-Light-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="./img/In-The-Light-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="In The Light">
             </div>
 
             <div class="w3-col m3">
-                <img src="/img/Delicious-Sunlight.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="./img/Delicious-Sunlight.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="Delicious Sunshine - Ryan Roga">
             </div>
 
