fixed image references

--- a/index.html
+++ b/index.html
@@ -113,67 +113,67 @@
             </div>
 
             <div class="w3-col m3">
-                <img src="/img/Abstract-1-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="./img/Abstract-1-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="Abstract Background">
             </div>
         </div>
 
         <div class="w3-row-padding w3-center w3-section">
             <div class="w3-col m3">
-                <img src="/img/Fall-Sunset-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="./img/Fall-Sunset-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="Atmosphere Music Festival">
             </div>
             <div class="w3-col m3">
-                <img src="/img/Golden-Atmosphere-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="./img/Golden-Atmosphere-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="Wooden Bridge Stock Photo B&W">
             </div>
             <div class="w3-col m3">
-                <img src="/img/Sunset-Hike-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="./img/Sunset-Hike-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="Atmosphere Music Festival">
             </div>
             <div class="w3-col m3">
-                <img src="/img/West-Coast-Waterfall-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="./img/West-Coast-Waterfall-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="China Beach B&W">
             </div>
         </div>
 
         <div class="w3-row-padding w3-center w3-section">
             <div class="w3-col m3">
-                <img src="/img/Moss-Spores-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="./img/Moss-Spores-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="Atmosphere Music Festival">
             </div>
             <div class="w3-col m3">
-                <img src="/img/Cat-Eyes-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="./img/Cat-Eyes-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="Wooden Bridge Stock Photo B&W">
             </div>
             <div class="w3-col m3">
-                <img src="/img/China-Beach-Mist-BW-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="./img/China-Beach-Mist-BW-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="Atmosphere Music Festival">
             </div>
             <div class="w3-col m3">
-                <img src="/img/Portrait-3-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="./img/Portrait-3-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="China Beach B&W">
             </div>
         </div>
 
         <div class="w3-row-padding w3-center w3-section">
             <div class="w3-col m3">
-                <img src="/img/Atmosphere-3-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="./img/Atmosphere-3-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="Atmosphere Music Festival">
             </div>
 
             <div class="w3-col m3">
-                <img src="/img/BW-Wood-Bridge-Stock-2-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="./img/BW-Wood-Bridge-Stock-2-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="Wooden Bridge Stock Photo B&W">
             </div>
 
             <div class="w3-col m3">
-                <img src="/img/Atmosphere-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="./img/Atmosphere-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="Atmosphere Music Festival">
             </div>
 
             <div class="w3-col m3">
-                <img src="/img/Thorns-And-Ice-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="./img/Thorns-And-Ice-Ryan-Roga.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="China Beach B&W">
             </div>
             <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
@@ -204,7 +204,7 @@
 
         <div class="w3-row w3-padding-32 w3-section">
             <div class="w3-col m4 w3-container">
-                <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
+                <img src="w3images/map.jpg" class="w3-image w3-round" style="width:100%">
             </div>
             <div class="w3-col m8 w3-panel">
                 <div class="w3-large w3-margin-bottom">
