--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="w3-row">
             <div class="w3-col m6 w3-center w3-padding-large">
                 <p><b><i class="fa fa-user w3-margin-right"></i>Ryan Roga</b></p><br>
-                <img src="/img/torch-award-2.jpeg" class="w3-round w3-image w3-opacity w3-hover-opacity-off"
+                <img src="./img/torch-award-2.jpeg" class="w3-round w3-image w3-opacity w3-hover-opacity-off"
                     alt="Photo of Me" width="500" height="333">
             </div>
 
