Added Website Section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="#home" class="w3-bar-item w3-button">HOME</a>
             <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
             <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
+            <a href="#websites" class="w3-bar-item w3-button w3-hide-small"><i class="fas fa-browser"></i> WEBSITES</a>
             <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
             <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
                 <i class="fa fa-search"></i>
@@ -177,6 +178,33 @@
                     class="w3-hover-opacity" alt="China Beach B&W">
             </div>
             <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
+        </div>
+    </div>
+
+    <!-- Second Parallax Image with Website Text -->
+    <div class="bgimg-4 w3-display-container w3-opacity-min">
+        <div class="w3-display-middle">
+            <span class="w3-xxlarge w3-text-white w3-wide">WEBSITES</span>
+        </div>
+    </div>
+
+    <!-- Section for Website Showcase -->
+    <div class="w3-content w3-container w3-padding-64" id="websites">
+        <div class="w3-third w3-section w3-container">
+            <h2 class="w3-center">MossAway Roof Moss Removal</h2>
+            <a href="https://www.mossaway.ca/" target="_blank" rel="noopener noreferrer"><img
+                    src="./img/MossAway-Website.png" style="width:100%;" alt="MossAway Roof Moss Removal Website"></a>
+        </div>
+        <div class="w3-third w3-section w3-container">
+            <h2 class="w3-center">Comox Window Cleaning</h2>
+            <a href="https://www.comoxwindowcleaning.com/" target="_blank" rel="noopener noreferrer"><img
+                    src="./img/Comox-Window-Cleaning.png" style="width:100%;"
+                    alt="MossAway Roof Moss Removal Website"></a>
+        </div>
+        <div class="w3-third w3-section w3-container">
+            <h2 class="w3-center">Worldboss Entertainment</h2>
+            <a href="https://www.mossaway.ca/" target="_blank" rel="noopener noreferrer"><img
+                    src="./img/MossAway-Website.png" style="width:100%;" alt="MossAway Roof Moss Removal Website"></a>
         </div>
     </div>
 
