--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     <div class="w3-content w3-container w3-padding-64" id="about">
         <h3 class="w3-center">ABOUT ME</h3>
         <p class="w3-center"><em>Web Designer. Business Owner. Photographer.</em></p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dicta sint mollitia perspiciatis corrupti velit earum, cum dolore, ex, sed at eum dolorum et laboriosam molestias fugit consequuntur necessitatibus facilis!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dicta sint mollitia perspiciatis
+            corrupti velit earum, cum dolore, ex, sed at eum dolorum et laboriosam molestias fugit consequuntur
+            necessitatibus facilis!</p>
         <div class="w3-row">
             <div class="w3-col m6 w3-center w3-padding-large">
                 <p><b><i class="fa fa-user w3-margin-right"></i>Ryan Roga</b></p><br>
@@ -247,17 +249,37 @@
                 <p>Or leave me a note:</p>
 
                 <div class="form">
-                    <form action="">
-                        <input type="text" name="name" id="name" autocomplete="off" required>
-                        <label for="name">
+                <form action="">
+                  <div>
+                        <input type="text" name="name" id="name" autocomplete="name" required>
+                        <label for="name" class="label-name">
                             <span class="content-name">
                                 Full Name
                             </span>
                         </label>
-                    </form>
-                </div>
+                    </div>
 
-                <!-- Old Form...
+                    <!-- <div>
+                        <input type="email" name="email" id="email" autocomplete="email" required>
+                        <label for="email" class="label-name">
+                            <span>
+                                Email Address
+                            </span>
+                        </label>
+                    </div>
+
+                    <div>
+                        <input type="phone" name="phone" id="phone" autocomplete="tel" required>
+                        <label for="phone" class="label-name">
+                            <span>
+                                Phone Number
+                            </span>
+                        </label>
+                    </div> -->
+                </form>
+            </div>
+
+            <!-- Old Form...
 
                     <form action="/action_page.php" target="_blank">
                     <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
@@ -274,8 +296,8 @@
                     </button>
                 </form> -->
 
-            </div>
         </div>
+    </div>
     </div>
 
     <!-- Footer -->
