--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="styles.css">
+
+<!-- I have access to my own fontawesome account and I'm using that here -->
 <script src="https://kit.fontawesome.com/3fe1c2969f.js" crossorigin="anonymous"></script>
 
 <body>
@@ -31,7 +33,7 @@
         <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
             <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
             <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
-            <a href="#websites" class="w3-bar-item w3-button"></i>WEBSITES</a>
+            <a href="#websites" class="w3-bar-item w3-button">WEBSITES</a>
             <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
             <a href="#" class="w3-bar-item w3-button">SEARCH</a>
         </div>
@@ -48,20 +50,25 @@
     <!-- Container (About Section) -->
     <div class="w3-content w3-container w3-padding-64" id="about">
         <h3 class="w3-center">ABOUT ME</h3>
-        <p class="w3-center"><em>Web Designer. Business Owner. Photographer.</em></p>
+        <p class="w3-center"><em>Web Designer & Photographer</em></p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dicta sint mollitia perspiciatis
             corrupti velit earum, cum dolore, ex, sed at eum dolorum et laboriosam molestias fugit consequuntur
             necessitatibus facilis!</p>
         <div class="w3-row">
             <div class="w3-col m6 w3-center w3-padding-large">
-                <p><b><i class="fa fa-user w3-margin-right"></i>Ryan Roga</b></p><br>
-                <img src="./img/torch-award-2.jpeg" class="w3-round w3-image w3-opacity w3-hover-opacity-off"
-                    alt="Photo of Me" width="500" height="333">
+                <img src="./img/torch-award-2.jpeg" class="w3-round w3-image" alt="Photo of Me" width="500"
+                    height="333">
             </div>
 
             <!-- Hide this text on small devices -->
             <div class="w3-col m6 w3-hide-small w3-padding-large">
-                <p>Business owner. torch award winner. self starter web developer. etc.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem iusto eligendi, cupiditate iste
+                    fugiat nisi quae, sapiente eius, libero atque sed ducimus facere quam sunt ipsa quas quia tenetur
+                    debitis. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam nam maiores, culpa
+                    deserunt iusto illum, molestiae, a animi accusamus quidem beatae labore placeat dolore possimus
+                    harum modi porro enim atque! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia
+                    labore doloremque eveniet voluptas velit eaque maiores placeat, omnis sapiente delectus esse
+                    incidunt. Fugiat autem rerum voluptatem maxime accusamus quisquam sit!</p>
             </div>
         </div>
         <!-- maybe something here later -->
@@ -185,9 +192,9 @@
     </div>
 
     <!-- Second Parallax Image with Website Text -->
-    <div class="bgimg-4 w3-display-container w3-opacity-min">
+    <div class="bgimg-4 w3-display-container w3-opacity">
         <div class="w3-display-middle">
-            <span class="w3-xxlarge w3-text-white w3-wide">WEBSITES</span>
+            <span class="w3-xxlarge w3-text-black w3-wide">WEBSITES</span>
         </div>
     </div>
 
@@ -235,7 +242,7 @@
 
         <div class="w3-row w3-padding-32 w3-section">
             <div class="w3-col m4 w3-container">
-                <img src="w3images/map.jpg" class="w3-image w3-round" style="width:100%">
+                <img src="/img/map.jpg" class="w3-image w3-round" style="width:100%">
             </div>
             <div class="w3-col m8 w3-panel">
                 <div class="w3-large w3-margin-bottom">
@@ -249,17 +256,17 @@
                 <p>Or leave me a note:</p>
 
                 <div class="form">
-                <form action="">
-                  <div>
-                        <input type="text" name="name" id="name" autocomplete="name" required>
-                        <label for="name" class="label-name">
-                            <span class="content-name">
-                                Full Name
-                            </span>
-                        </label>
-                    </div>
+                    <form action="">
+                        <div>
+                            <input type="text" name="name" id="name" autocomplete="name" required>
+                            <label for="name" class="label-name">
+                                <span class="content-name">
+                                    Full Name
+                                </span>
+                            </label>
+                        </div>
 
-                    <!-- <div>
+                        <!-- <div>
                         <input type="email" name="email" id="email" autocomplete="email" required>
                         <label for="email" class="label-name">
                             <span>
@@ -276,10 +283,10 @@
                             </span>
                         </label>
                     </div> -->
-                </form>
-            </div>
+                    </form>
+                </div>
 
-            <!-- Old Form...
+                <!-- Old Form...
 
                     <form action="/action_page.php" target="_blank">
                     <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
@@ -296,8 +303,8 @@
                     </button>
                 </form> -->
 
+            </div>
         </div>
-    </div>
     </div>
 
     <!-- Footer -->
@@ -311,8 +318,8 @@
             <i class="fa fa-twitter w3-hover-opacity"></i>
             <i class="fa fa-linkedin w3-hover-opacity"></i>
         </div>
-        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
-                class="w3-hover-text-green">w3.css</a></p>
+        <!-- <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
+                class="w3-hover-text-green">w3.css</a></p> -->
     </footer>
 
     <script>
