having issues with h1 margin affecting bg image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         content="web design, web developer, affordable website, affordable web design, affordable web developer, small business website, website for small business">
     <meta name="author" content="Ryan Paranich">
     <title>Roga Web Design | Welcome</title>
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/3fe1c2969f.js" crossorigin="anonymous"></script>
 </head>
@@ -17,11 +18,11 @@
     <header>
         <div class="container">
             <div id="header-brand">
-                <h1>Roga Web Design</h1>
+                <h1><span class="feature">Roga</span> Web Design</h1>
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                 </ul>
@@ -29,7 +30,7 @@
         </div>
     </header>
 
-    <section id="showcase">
+    <section id="blurb">
         <div class="container">
             <h1>Affordable Professional Web Design</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, nam consectetur odio numquam nulla deserunt
@@ -72,6 +73,12 @@
                 <i class="far fa-phone-laptop"></i>
                 <h3>Graphic Design</h3>
                 <p>Design thinking for your customer journey.</p>
+            </div>
+
+            <div class="box">
+                <i class="fas fa-bolt"></i>
+                <h3>Zapier Automation</h3>
+                <p>Supercharge your workflow with automation.</p>
             </div>
 
         </div>
