--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <input type="email" id="email" required>
                 <label for="phone">Phone</label>
                 <input type="tel" id="phone" required>
-                <button type="submit" class="quote-submit">Request A Quote</button>
+                <button type="submit" class="btn1">Request A Quote</button>
             </form>
         </div>
     </section>
@@ -57,26 +57,26 @@
     <section id="skills">
         <div class="container">
 
-            <div class="box">
-                <i class="fab fa-html5"></i>
+            <div class="skill">
+                <i class="fab fa-html5 fa-7x"></i>
                 <h3>HTML5</h3>
                 <p>Fully responsive HTML5 websites.</p>
             </div>
 
-            <div class="box">
-                <i class="fab fa-css3-alt"></i>
+            <div class="skill">
+                <i class="fab fa-css3-alt fa-7x"></i>
                 <h3>CS3</h3>
                 <p>Beautiful CS3 styling.</p>
             </div>
 
-            <div class="box">
-                <i class="far fa-phone-laptop"></i>
+            <div class="skill">
+                <i class="far fa-phone-laptop fa-7x"></i>
                 <h3>Graphic Design</h3>
                 <p>Design thinking for your customer journey.</p>
             </div>
 
-            <div class="box">
-                <i class="fas fa-bolt"></i>
+            <div class="skill">
+                <i class="fas fa-bolt fa-7x"></i>
                 <h3>Zapier Automation</h3>
                 <p>Supercharge your workflow with automation.</p>
             </div>
