fixed the issue with flexbox in skills section

--- a/index.html
+++ b/index.html
@@ -47,15 +47,13 @@
                 <input type="text" id="name" placeholder="Full Name" required>
                 <label for="email">Email</label>
                 <input type="email" id="email" required>
-                <label for="phone">Phone</label>
-                <input type="tel" id="phone" required>
                 <button type="submit" class="btn1">Request A Quote</button>
             </form>
         </div>
     </section>
 
     <section id="skills">
-        <div class="container">
+        <div class="flex-row">
 
             <div class="skill">
                 <i class="fab fa-html5 fa-7x"></i>
