--- a/index.html
+++ b/index.html
@@ -40,15 +40,17 @@
     </section>
 
     <section id="contact-form">
-        <div class="container contact">
-            <h2>Request A Quote</h2>
-            <form action="">
-                <label for="name">Name</label>
-                <input type="text" id="name" placeholder="Full Name" required>
-                <label for="email">Email</label>
-                <input type="email" id="email" required>
-                <button type="submit" class="btn1">Request A Quote</button>
-            </form>
+        <div class="container">
+            <div class="flex-row">
+                <h2>Request A Quote</h2>
+                <form action="">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" placeholder="Full Name" required>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" required>
+                    <button type="submit" class="btn1">Request A Quote</button>
+                </form>
+            </div>
         </div>
     </section>
 
