roughing out about page

--- a/about.html
+++ b/about.html
@@ -30,15 +30,8 @@
         </div>
     </header>
 
-    <section id="blurb">
-        <div class="container">
-
-        </div>
-    </section>
-
     <section id="skills">
         <div class="flex-row">
-
             <div class="skill">
                 <i class="fab fa-html5 fa-7x"></i>
                 <h3>HTML5</h3>
@@ -62,7 +55,24 @@
                 <h3>Zapier Automation</h3>
                 <p>Supercharge your workflow with automation.</p>
             </div>
+        </div>
+    </section>
 
+    <section id="about">
+        <div class="container">
+            <article id="about-col">
+                <h1 class="about-title">About Roga</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ipsa ipsum consectetur quisquam.
+                    Labore, pariatur cumque maxime magnam alias quisquam porro voluptas accusantium, facere distinctio
+                    molestiae nam blanditiis impedit libero.</p>
+                <p>Consectetur adipisicing elit. Amet ipsa ipsum consectetur quisquam. Labore, pariatur cumque maxime
+                    magnam alias quisquam porro voluptas accusantium, facere distinctio molestiae nam blanditiis impedit
+                    libero.</p>
+            </article>
+            <aside id="sidebar">
+                <h3>Things I Do</h3>
+                <p></p>
+            </aside>
         </div>
     </section>
 
