stubbed out services page

--- a/about.html
+++ b/about.html
@@ -22,8 +22,8 @@
             </div>
             <nav>
                 <ul>
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li class="active"><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                 </ul>
             </nav>
@@ -67,11 +67,17 @@
                     molestiae nam blanditiis impedit libero.</p>
                 <p>Consectetur adipisicing elit. Amet ipsa ipsum consectetur quisquam. Labore, pariatur cumque maxime
                     magnam alias quisquam porro voluptas accusantium, facere distinctio molestiae nam blanditiis impedit
-                    libero.</p>
+                    libero. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat, similique. Eveniet nisi
+                    illum repellat provident laudantium nobis, error ullam iusto deleniti cum dolore nihil recusandae
+                    autem dignissimos illo facere quas.</p>
             </article>
             <aside id="sidebar">
-                <h3>Things I Do</h3>
-                <p></p>
+                <div class="dark">
+                    <h3>Things I Do</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis consequatur dolor
+                        asperiores iusto iste rerum ex magni perferendis modi quibusdam distinctio quas quaerat sunt
+                        maxime, pariatur expedita suscipit numquam dignissimos?</p>
+                </div>
             </aside>
         </div>
     </section>
