--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 
     <section id="about">
         <div class="container">
-            <article id="about-col">
+            <article id="text-col">
                 <h1 class="about-title">About Roga</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ipsa ipsum consectetur quisquam.
                     Labore, pariatur cumque maxime magnam alias quisquam porro voluptas accusantium, facere distinctio
