--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <input type="text" id="name" placeholder="Full Name" required>
                     <label for="email">Email</label>
                     <input type="email" id="email" required>
-                    <button type="submit" class="btn1">Request A Quote</button>
+                    <button type="submit" class="submit-button">Request A Quote</button>
                 </form>
             </div>
         </div>
