--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
     <meta name="keywords"
         content="web design, web developer, affordable website, affordable web design, affordable web developer, small business website, website for small business">
     <meta name="author" content="Ryan Paranich">
-    <title>Roga Web Design | About</title>
+    <title>Roga Web Design | Services</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/3fe1c2969f.js" crossorigin="anonymous"></script>
@@ -30,37 +30,76 @@
         </div>
     </header>
 
-    <section id="skills">
-        <div class="flex-row">
-            <div class="skill">
-                <i class="fab fa-html5 fa-7x"></i>
-                <h3>HTML5</h3>
-                <p>Fully responsive HTML5 websites.</p>
-            </div>
-
-            <div class="skill">
-                <i class="fab fa-css3-alt fa-7x"></i>
-                <h3>CS3</h3>
-                <p>Beautiful CS3 styling.</p>
-            </div>
-
-            <div class="skill">
-                <i class="far fa-phone-laptop fa-7x"></i>
-                <h3>Graphic Design</h3>
-                <p>Design thinking for your customer journey.</p>
-            </div>
-
-            <div class="skill">
-                <i class="fas fa-bolt fa-7x"></i>
-                <h3>Zapier Automation</h3>
-                <p>Supercharge your workflow with automation.</p>
-            </div>
+    <section id="services">
+        <div class="container">
+            <article class="text-col">
+                <h1 class="page-title">
+                    Services
+                </h1>
+                <ul id="services">
+                    <li class="service">
+                        <h3>Website Design</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit culpa iure fugiat omnis
+                            minima eius porro, dolorum, necessitatibus perspiciatis maxime tenetur explicabo commodi
+                            vitae! Fuga ratione adipisci laboriosam harum expedita.</p>
+                        <p>Pricing: $1,000 - $2,500</p>
+                    </li>
+                    <li class="service">
+                        <h3>Zapier Implementation</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit culpa iure fugiat omnis
+                            minima eius porro, dolorum, necessitatibus perspiciatis maxime tenetur explicabo commodi
+                            vitae! Fuga ratione adipisci laboriosam harum expedita.</p>
+                        <p>Pricing: $500 - $1,500</p>
+                    </li>
+                    <li class="service">
+                        <h3>Zapier Services</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit culpa iure fugiat omnis
+                            minima eius porro, dolorum, necessitatibus perspiciatis maxime tenetur explicabo commodi
+                            vitae! Fuga ratione adipisci laboriosam harum expedita.</p>
+                        <p>Pricing: $150 per month</p>
+                    </li>
+                    <li class="service">
+                        <h3>Website Hosting</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit culpa iure fugiat omnis
+                            minima eius porro, dolorum, necessitatibus perspiciatis maxime tenetur explicabo commodi
+                            vitae! Fuga ratione adipisci laboriosam harum expedita.</p>
+                        <p>Pricing: Starting at $25 per month</p>
+                    </li>
+                    <li class="service">
+                        <h3>Domain Name Purchasing</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit culpa iure fugiat omnis
+                            minima eius porro, dolorum, necessitatibus perspiciatis maxime tenetur explicabo commodi
+                            vitae! Fuga ratione adipisci laboriosam harum expedita.</p>
+                        <p>Pricing: Starting at $19 per year</p>
+                    </li>
+                </ul>
+            </article>
+            <aside id="service-list">
+                <div class="dark sidebar">
+                    <h3>Request A Quote</h3>
+                    <form action="" class="quote">
+                        <div>
+                            <label for="name">Name</label><br>
+                            <input id="name" type="text" placeholder="Full Name" required>
+                        </div>
+                        <div>
+                            <label for="email">Email</label><br>
+                            <input id="email" type="email" placeholder="Email Address" required>
+                        </div>
+                        <div>
+                            <label>Message</label><br>
+                            <textarea placeholder="Message..."></textarea>
+                        </div>
+                        <button class="submit-button" type="submit">Request Quote</button>
+                    </form>
+                </div>
+            </aside>
         </div>
     </section>
 
     <section id="about">
         <div class="container">
-            <article id="about-col">
+            <article id="text-col">
                 <h1 class="about-title">About Roga</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ipsa ipsum consectetur quisquam.
                     Labore, pariatur cumque maxime magnam alias quisquam porro voluptas accusantium, facere distinctio
