--- a/index.html
+++ b/index.html
@@ -60,25 +60,25 @@
             <div class="skill">
                 <i class="fab fa-html5 fa-7x"></i>
                 <h3>HTML5</h3>
-                <p>Fully responsive HTML5 websites.</p>
+                <p>Get a fully responsive HTML5 website built from scratch.</p>
             </div>
 
             <div class="skill">
                 <i class="fab fa-css3-alt fa-7x"></i>
                 <h3>CS3</h3>
-                <p>Beautiful CS3 styling.</p>
+                <p>Beautiful styled using CS3 that aligns with your brand.</p>
             </div>
 
             <div class="skill">
-                <i class="far fa-phone-laptop fa-7x"></i>
-                <h3>Graphic Design</h3>
-                <p>Design thinking for your customer journey.</p>
+                <i class="far fa-chart-network fa-7x"></i>
+                <h3>Design Thinking</h3>
+                <p>Applying design thinking to craft your customer journey.</p>
             </div>
 
             <div class="skill">
                 <i class="fas fa-bolt fa-7x"></i>
                 <h3>Zapier Automation</h3>
-                <p>Supercharge your workflow with automation.</p>
+                <p>Supercharged workflow enhanced with automation.</p>
             </div>
 
         </div>
