--- a/about.html
+++ b/about.html
@@ -31,8 +31,15 @@
     </header>
 
     <section id="skills">
+        <h2>Modern Web Design for Small Business</h2>
         <div class="flex-row">
-            
+
+            <div class="skill">
+                <i class="far fa-mobile fa-7x"></i>
+                <h3>Mobile First</h3>
+                <p>Websites built with modern technology trends in mind.</p>
+            </div>
+
             <div class="skill">
                 <i class="fab fa-html5 fa-7x"></i>
                 <h3>HTML5</h3>
@@ -46,17 +53,11 @@
             </div>
 
             <div class="skill">
-                <i class="far fa-chart-network fa-7x"></i>
-                <h3>Design Thinking</h3>
-                <p>Applying design thinking to craft your customer journey.</p>
+                <i class="fas fa-search-dollar fa-7x"></i>
+                <h3>Search Optimized</h3>
+                <p>Get a website with great SEO and start getting noticed.</p>
             </div>
 
-            <div class="skill">
-                <i class="fas fa-bolt fa-7x"></i>
-                <h3>Zapier Automation</h3>
-                <p>Supercharged workflow enhanced with automation.</p>
-            </div>
-            
         </div>
     </section>
 
@@ -64,14 +65,15 @@
         <div class="container">
             <article id="text-col">
                 <h1 class="about-title">About Roga</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ipsa ipsum consectetur quisquam.
-                    Labore, pariatur cumque maxime magnam alias quisquam porro voluptas accusantium, facere distinctio
-                    molestiae nam blanditiis impedit libero.</p>
-                <p>Consectetur adipisicing elit. Amet ipsa ipsum consectetur quisquam. Labore, pariatur cumque maxime
-                    magnam alias quisquam porro voluptas accusantium, facere distinctio molestiae nam blanditiis impedit
-                    libero. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat, similique. Eveniet nisi
-                    illum repellat provident laudantium nobis, error ullam iusto deleniti cum dolore nihil recusandae
-                    autem dignissimos illo facere quas.</p>
+                <p>Ryan Roga has been the owner and operations manager of several successful small businesses. His focus
+                    on
+                    the customer journey lead him to win the 2019 Better Business Bureau Torch Award. His small business
+                    operate almost exclusively on organic web traffic and your scan too.</p>
+                <p>These days, your website is often the first experience your customers have with your business. You
+                    want to make it a good one. It's also no longer enough to simply have a website - it has to be seen
+                    by search engines. Roga Web Design employs every tool there is to make sure your site is looking
+                    great, working great, feeling great, performing great. Call or click today to get started with a
+                    free quote for your small business website.</p>
             </article>
             <aside id="sidebar">
                 <div class="dark">
