--- a/about.html
+++ b/about.html
@@ -48,8 +48,8 @@
 
             <div class="skill">
                 <i class="fab fa-css3-alt fa-7x"></i>
-                <h3>CS3</h3>
-                <p>Beautiful styled using CS3 that aligns with your brand.</p>
+                <h3>CSS3</h3>
+                <p>Beautiful styled using CSS3 that aligns with your brand.</p>
             </div>
 
             <div class="skill">
