--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
             <div class="skill">
                 <i class="fab fa-css3-alt fa-7x"></i>
-                <h3>CS3</h3>
-                <p>Beautiful styled using CS3 that aligns with your brand.</p>
+                <h3>CSS3</h3>
+                <p>Beautiful styled using CSS3 that aligns with your brand.</p>
             </div>
 
             <div class="skill">
@@ -86,7 +86,8 @@
 
     <footer>
         <p>Roga Web Design &copy; 2020<br>
-            My other websites: <a href = "https://www.mossaway.ca" target="blank">MossAway</a> | <a href = "https://www.comoxwindowcleaning.com" target="blank">Comox Window Cleaning!</a></p>
+            My other websites: <a href="https://www.mossaway.ca" target="blank">MossAway</a> | <a
+                href="https://www.comoxwindowcleaning.com" target="blank">Comox Window Cleaning!</a></p>
     </footer>
 
 </body>
