starting responsive styles

--- a/services.html
+++ b/services.html
@@ -33,9 +33,9 @@
     <section id="services">
         <div class="container">
             <article class="text-col">
-                <h1 class="page-title">
+                <h2 class="page-title">
                     Services
-                </h1>
+                </h2>
                 <ul id="services">
                     <li class="service">
                         <h3>Website Design</h3>
@@ -74,9 +74,9 @@
                     </li>
                 </ul>
             </article>
-            <aside id="service-list">
+            <aside id="rfp">
                 <div class="dark sidebar">
-                    <h3>Request A Quote</h3>
+                    <h3>Request Quote</h3>
                     <form action="" class="quote">
                         <div>
                             <label for="name">Name</label><br>
