--- a/about.html
+++ b/about.html
@@ -93,7 +93,9 @@
     </section>
 
     <footer>
-        <p>Roga Web Design &copy; 2020</p>
+        <p>Roga Web Design &copy; 2020<br>
+            My other websites: <a href="https://www.mossaway.ca" target="blank">MossAway</a> | <a
+                href="https://www.comoxwindowcleaning.com" target="blank">Comox Window Cleaning!</a></p>
     </footer>
 
 </body>
