--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section id="contact-form">
         <div class="container">
             <div class="flex-row">
-                <h2>Request A Quote</h2>
+                <h2>Request Quote</h2>
                 <form action="">
                     <label for="name">Name</label>
                     <input type="text" id="name" placeholder="Full Name" required>
