Morning mucking about
Small changes. Still need to completely redo the forms.

--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@
             <div class="flex-row">
                 <h2>Request Quote</h2>
                 <form action="">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" placeholder="Full Name" required>
-                    <label for="email">Email</label>
-                    <input type="email" id="email" required>
+                    <div>
+                        <label for="name">Name</label>
+                        <input type="text" id="name" placeholder="Full Name" required>
+                    </div>
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" required>
+                    </div>
                     <button type="submit" class="submit-button">Request A Quote</button>
                 </form>
             </div>
