--- a/services.html
+++ b/services.html
@@ -32,10 +32,11 @@
 
     <section id="services">
         <div class="container">
+            <h2 class="page-title">
+                Services
+            </h2>
             <article class="text-col">
-                <h2 class="page-title">
-                    Services
-                </h2>
+
                 <ul id="services">
                     <li class="service">
                         <h3>Website Design</h3>
@@ -76,21 +77,18 @@
             </article>
             <aside id="rfp">
                 <div class="dark sidebar">
-                    <h3>Request Quote</h3>
+                    <h3>Request a free quote...</h3>
                     <form action="" class="quote">
                         <div>
-                            <label for="name">Name</label><br>
-                            <input id="name" type="text" placeholder="Full Name" required>
+                            <input id="name" type="text" class="services-input" placeholder="Full Name" required>
                         </div>
                         <div>
-                            <label for="email">Email</label><br>
-                            <input id="email" type="email" placeholder="Email Address" required>
+                            <input id="email" type="email" class="services-input" placeholder="Email Address" required>
                         </div>
                         <div>
-                            <label>Message</label><br>
-                            <textarea placeholder="Message..."></textarea>
+                            <textarea placeholder="Message..." class="services-input"></textarea>
                         </div>
-                        <button class="submit-button" type="submit">Request Quote</button>
+                        <input type="submit" value="Request Quote" class="services-submit" />
                     </form>
                 </div>
             </aside>
