--- a/index.html
+++ b/index.html
@@ -39,25 +39,6 @@
         </div>
     </section>
 
-    <section id="contact-form">
-        <div class="container">
-            <div class="flex-row">
-                <h2>Request Quote</h2>
-                <form action="">
-                    <div>
-                        <label for="name">Name</label>
-                        <input type="text" id="name" placeholder="Full Name" required>
-                    </div>
-                    <div>
-                        <label for="email">Email</label>
-                        <input type="email" id="email" required>
-                    </div>
-                    <button type="submit" class="submit-button">Request A Quote</button>
-                </form>
-            </div>
-        </div>
-    </section>
-
     <section id="skills">
         <div class="flex-row">
 
@@ -86,6 +67,26 @@
             </div>
 
         </div>
+    </section>
+
+    <section id="contact-us">
+        <form class="front-form">
+            <div class="sidebar front-contact-form">
+                <h3>Request a free quote...</h3>
+                <form action="" class="quote">
+                    <div>
+                        <input id="name" type="text" class="services-input" placeholder="Full Name" required>
+                    </div>
+                    <div>
+                        <input id="email" type="email" class="services-input" placeholder="Email Address" required>
+                    </div>
+                    <div>
+                        <textarea placeholder="Message..." class="services-input"></textarea>
+                    </div>
+                    <input type="submit" value="Request Quote" class="services-submit" />
+                </form>
+            </div>
+        </form>
     </section>
 
     <footer>
