--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
     <footer>
         <p>Roga Web Design &copy; 2020<br>
-            My other websites: <a href="https://www.mossaway.ca" target="blank">MossAway</a> | <a
-                href="https://www.comoxwindowcleaning.com" target="blank">Comox Window Cleaning!</a></p>
+            My websites: <a href="https://www.mossaway.ca" target="blank">MossAway</a> | <a
+                href="https://www.comoxwindowcleaning.com" target="blank">Comox Window Cleaning</a></p>
     </footer>
 
 </body>
