--- a/services.html
+++ b/services.html
@@ -110,25 +110,20 @@
             </article>
             <aside id="sidebar">
                 <div class="dark">
-                    <h3>Things I Do</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis consequatur dolor
-                        asperiores iusto iste rerum ex magni perferendis modi quibusdam distinctio quas quaerat sunt
-                        maxime, pariatur expedita suscipit numquam dignissimos?</p>
+                    <h3>Why Choose Me?</h3>
+                    <p>As a small, service-based business owner I know the needs of your small, service-based business
+                        better than any other developer out there. My goal is the success of your business by leveraging
+                        the power of a well designed website. I want to make a website that will work hard for your
+                        business - like you do!</p>
                 </div>
             </aside>
         </div>
     </section>
 
-    <section>
-
-
-
-    </section>
-
     <footer>
         <p>Roga Web Design &copy; 2020<br>
-            My other websites: <a href="https://www.mossaway.ca" target="blank">MossAway</a> | <a
-                href="https://www.comoxwindowcleaning.com" target="blank">Comox Window Cleaning!</a></p>
+            My websites: <a href="https://www.mossaway.ca" target="blank">MossAway</a> | <a
+                href="https://www.comoxwindowcleaning.com" target="blank">Comox Window Cleaning</a></p>
     </footer>
 
 </body>
