putting pin in it here.

--- a/services.html
+++ b/services.html
@@ -95,7 +95,7 @@
         </div>
     </section>
 
-    <section id="about">
+    <!-- <section id="about">
         <div class="container">
             <article id="text-col">
                 <h1 class="about-title">About Roga</h1>
@@ -118,7 +118,7 @@
                 </div>
             </aside>
         </div>
-    </section>
+    </section> -->
 
     <footer>
         <p>Roga Web Design &copy; 2020<br>
