Front page changes
Ripped out the crappy contact form. Replaced with some additional skills and technology jargin.

--- a/index.html
+++ b/index.html
@@ -32,11 +32,8 @@
 
     <section id="blurb">
         <div class="container">
-            <h1>Affordable Professional Web Design</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, nam consectetur odio numquam nulla deserunt
-                facilis consequuntur minus blanditiis ducimus perspiciatis totam iure modi ipsam autem soluta omnis ipsa
-                temporibus.</p>
-        </div>
+            <h1>Affordable Professional <br id="mobile-only">Web Design</h1>
+            <p id='blurb-text'>Professional Websites & Design for Small Business</p>
     </section>
 
     <section id="skills">
@@ -69,24 +66,39 @@
         </div>
     </section>
 
-    <section id="contact-us">
-        <form class="front-form">
-            <div class="sidebar front-contact-form">
-                <h3>Request a free quote...</h3>
-                <form action="" class="quote">
-                    <div>
-                        <input id="name" type="text" class="services-input" placeholder="Full Name" required>
-                    </div>
-                    <div>
-                        <input id="email" type="email" class="services-input" placeholder="Email Address" required>
-                    </div>
-                    <div>
-                        <textarea placeholder="Message..." class="services-input"></textarea>
-                    </div>
-                    <input type="submit" value="Request Quote" class="services-submit" />
-                </form>
-            </div>
-        </form>
+    <section id="fullstack">
+        <h2>Fullstack Developer</h2>
+        <h3>Building a complete solution, front to back.</h3>
+        <div>
+            <h4>Frameworks & Libraries</h4>
+            <p><i class="fab fa-js-square"></i> Vanilla JavaScript</p>
+            <p><i class="fab fa-vuejs"></i> Vue.js</p>
+            <p><i class="fab fa-react"></i> React.js</p>
+            <p><i class="fab fa-vuejs"></i> Nuxt.js</p>
+        </div>
+        <div>
+            <h4>CSS Frameworks</h4>
+            <p><i class="fab fa-bootstrap"></i> Bootstrap</p>
+            <p><i class="fab fa-vuejs"></i> Vuetify</p>
+        </div>
+        <div>
+            <h4>SEO & Marketing</h4>
+            <p><i class="fas fa-search-dollar"></i> Website SEO</p>
+            <p><i class="far fa-audio-description"></i> Search & Display Ads</p>
+            <p><i class="fab fa-facebook-square"></i> Facebook Ads</p>
+        </div>
+        <div>
+            <h4>Database & Backend</h4>
+            <p><i class="fab fa-node-js"></i> Node.js</p>
+            <p><i class="far fa-database"></i> MySQL</p>
+            <p><i class="fas fa-leaf"></i> Mongo</p>
+            <p><i class="fab fa-google"></i> Firestore</p>
+        </div>
+        <div>
+            <h4>Dev Ops</h4>
+            <p><i class="fab fa-github-square"></i> GitHub</p>
+            <p><i class="far fa-cloud"></i> Google Cloud</p>
+        </div>
     </section>
 
     <footer>
