Finished styling home page

--- a/index.html
+++ b/index.html
@@ -67,38 +67,45 @@
     </section>
 
     <section id="fullstack">
-        <h2>Fullstack Developer</h2>
-        <h3>Building a complete solution, front to back.</h3>
-        <div class="showcase-group">
-            <h4>Frameworks & Libraries</h4>
-            <p><i class="fab fa-js-square"></i> Vanilla JavaScript</p>
-            <p><i class="fab fa-vuejs"></i> Vue.js</p>
-            <p><i class="fab fa-react"></i> React.js</p>
-            <p><i class="fab fa-vuejs"></i> Nuxt.js</p>
+        <h2>Your Next Fullstack Developer</h2>
+        <h3>Building complete solutions, front to back.</h3>
+        <div class="showcase-wrapper">
+            <div class="showcase-group">
+                <h4>Frameworks & Libraries</h4>
+                <p><i class="fab fa-js-square"></i> Vanilla JavaScript</p>
+                <p><i class="fab fa-vuejs"></i> Vue.js</p>
+                <p><i class="fab fa-react"></i> React.js</p>
+                <p><i class="fab fa-vuejs"></i> Nuxt.js</p>
+            </div>
+            <div class="showcase-group">
+                <h4>CSS Frameworks</h4>
+                <p><i class="fab fa-bootstrap"></i> Bootstrap</p>
+                <p><i class="fab fa-vuejs"></i> Vuetify</p>
+            </div>
+            <div class="showcase-group">
+                <h4>SEO & Marketing</h4>
+                <p><i class="fas fa-search-dollar"></i> Website SEO</p>
+                <p><i class="far fa-audio-description"></i> Search & Display Ads</p>
+                <p><i class="fab fa-facebook-square"></i> Facebook Ads</p>
+            </div>
+            <div class="showcase-group">
+                <h4>Database & Backend</h4>
+                <p><i class="fab fa-node-js"></i> Node.js</p>
+                <p><i class="far fa-database"></i> MySQL</p>
+                <p><i class="fas fa-leaf"></i> Mongo</p>
+                <p><i class="fab fa-google"></i> Firestore</p>
+            </div>
+            <div class="showcase-group">
+                <h4>Dev Ops</h4>
+                <p><i class="fab fa-github-square"></i> GitHub</p>
+                <p><i class="far fa-cloud"></i> Google Cloud</p>
+            </div>
         </div>
-        <div class="showcase-group">
-            <h4>CSS Frameworks</h4>
-            <p><i class="fab fa-bootstrap"></i> Bootstrap</p>
-            <p><i class="fab fa-vuejs"></i> Vuetify</p>
+
+        <div class="action-btn-wrapper">
+            <a href="/services.html"><button class="action-btn">Contact Us</button></a>
         </div>
-        <div class="showcase-group">
-            <h4>SEO & Marketing</h4>
-            <p><i class="fas fa-search-dollar"></i> Website SEO</p>
-            <p><i class="far fa-audio-description"></i> Search & Display Ads</p>
-            <p><i class="fab fa-facebook-square"></i> Facebook Ads</p>
-        </div>
-        <div class="showcase-group">
-            <h4>Database & Backend</h4>
-            <p><i class="fab fa-node-js"></i> Node.js</p>
-            <p><i class="far fa-database"></i> MySQL</p>
-            <p><i class="fas fa-leaf"></i> Mongo</p>
-            <p><i class="fab fa-google"></i> Firestore</p>
-        </div>
-        <div class="showcase-group">
-            <h4>Dev Ops</h4>
-            <p><i class="fab fa-github-square"></i> GitHub</p>
-            <p><i class="far fa-cloud"></i> Google Cloud</p>
-        </div>
+
     </section>
 
     <footer>
